--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,8 +104,8 @@ CurrentRotGridSize=0
 CurrentPosGridSize=1
 
 [MRU]
-MRUItem0=/Game/Levels/Area2-Market
-MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/Levels/Area2-Market
 MRUItem2=/Game/Levels/Demo
 MRUItem3=/Game/Levels/texturedzoo
 MRUItem4=/Game/Levels/MechanicsLevel
@@ -235,6 +235,7 @@ SetUpStats=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCat
 Inflict Status=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 Choose Status=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,
+CrystalHound_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -261,13 +262,13 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game
 
 [EditorStartup]
-LastLevel=/Game/Levels/Area2-Market
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/AIAgent/CrystalHound.CrystalHound
+OpenAssetsAtExit=/Game/Will/CrystalHound.CrystalHound
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/AIAgent/AIbot.AIbot
-OpenAssetsAtExit=/Game/Widgets/Ability_Wheel.Ability_Wheel
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2720,6 +2721,122 @@ Texture2D.Texture=True
 Texture2D.File Path=True
 Texture2D.Adjustments=True
 Texture2D.Compositing=True
+CrystalHound_C.Default=True
+CrystalHound_C.Tick=True
+CrystalHound_C.Character=True
+CrystalHound_C.Camera=True
+CrystalHound_C.Pawn=True
+CrystalHound_C.Rendering=True
+CrystalHound_C.Replication=True
+CrystalHound_C.Input=True
+CrystalHound_C.Actor=True
+CrystalHound_C.Variable=True
+CrystalHound_C.Sockets=True
+CrystalHound_C.Character Movement: Jumping / Falling=True
+CrystalHound_C.Character Movement (General Settings)=True
+CrystalHound_C.Character Movement: Walking=True
+CrystalHound_C.Character Movement: Swimming=True
+CrystalHound_C.Character Movement: Flying=True
+CrystalHound_C.Character Movement: Custom Movement=True
+CrystalHound_C.Character Movement (Rotation Settings)=True
+CrystalHound_C.Character Movement (Networking)=True
+CrystalHound_C.Character Movement: Physics Interaction=True
+CrystalHound_C.Character Movement=True
+CrystalHound_C.Character Movement: Avoidance=True
+CrystalHound_C.Character Movement: NavMesh Movement=True
+CrystalHound_C.RootMotion=True
+CrystalHound_C.NavMovement=True
+CrystalHound_C.Velocity=True
+CrystalHound_C.PlanarMovement=True
+CrystalHound_C.MovementComponent=True
+CrystalHound_C.Tags=True
+CrystalHound_C.ComponentReplication=True
+CrystalHound_C.Activation=True
+CrystalHound_C.Cooking=True
+CrystalHound_C.Events=True
+CrystalHound_C.TransformCommon=True
+CrystalHound_C.Animation=True
+CrystalHound_C.Mesh=True
+CrystalHound_C.Physics=True
+CrystalHound_C.Clothing=True
+CrystalHound_C.Collision=True
+CrystalHound_C.Lighting=True
+CrystalHound_C.ClothingSimulation=True
+CrystalHound_C.Shape=True
+CrystalHound_C.Navigation=True
+CrystalHound_C.Materials=True
+REINST_CrystalHound_C_131.Variable=True
+REINST_CrystalHound_C_131.Sockets=True
+REINST_CrystalHound_C_131.Character Movement: Jumping / Falling=True
+REINST_CrystalHound_C_131.Character Movement (General Settings)=True
+REINST_CrystalHound_C_131.Character Movement: Walking=True
+REINST_CrystalHound_C_131.Character Movement: Swimming=True
+REINST_CrystalHound_C_131.Character Movement: Flying=True
+REINST_CrystalHound_C_131.Character Movement: Custom Movement=True
+REINST_CrystalHound_C_131.Character Movement (Rotation Settings)=True
+REINST_CrystalHound_C_131.Character Movement (Networking)=True
+REINST_CrystalHound_C_131.Character Movement: Physics Interaction=True
+REINST_CrystalHound_C_131.Character Movement=True
+REINST_CrystalHound_C_131.Character Movement: Avoidance=True
+REINST_CrystalHound_C_131.Character Movement: NavMesh Movement=True
+REINST_CrystalHound_C_131.RootMotion=True
+REINST_CrystalHound_C_131.NavMovement=True
+REINST_CrystalHound_C_131.Velocity=True
+REINST_CrystalHound_C_131.PlanarMovement=True
+REINST_CrystalHound_C_131.MovementComponent=True
+REINST_CrystalHound_C_131.Tags=True
+REINST_CrystalHound_C_131.ComponentReplication=True
+REINST_CrystalHound_C_131.Activation=True
+REINST_CrystalHound_C_131.Cooking=True
+REINST_CrystalHound_C_131.Events=True
+REINST_CrystalHound_C_139.Variable=True
+REINST_CrystalHound_C_139.Sockets=True
+REINST_CrystalHound_C_139.Character Movement: Jumping / Falling=True
+REINST_CrystalHound_C_139.Character Movement (General Settings)=True
+REINST_CrystalHound_C_139.Character Movement: Walking=True
+REINST_CrystalHound_C_139.Character Movement: Swimming=True
+REINST_CrystalHound_C_139.Character Movement: Flying=True
+REINST_CrystalHound_C_139.Character Movement: Custom Movement=True
+REINST_CrystalHound_C_139.Character Movement (Rotation Settings)=True
+REINST_CrystalHound_C_139.Character Movement (Networking)=True
+REINST_CrystalHound_C_139.Character Movement: Physics Interaction=True
+REINST_CrystalHound_C_139.Character Movement=True
+REINST_CrystalHound_C_139.Character Movement: Avoidance=True
+REINST_CrystalHound_C_139.Character Movement: NavMesh Movement=True
+REINST_CrystalHound_C_139.RootMotion=True
+REINST_CrystalHound_C_139.NavMovement=True
+REINST_CrystalHound_C_139.Velocity=True
+REINST_CrystalHound_C_139.PlanarMovement=True
+REINST_CrystalHound_C_139.MovementComponent=True
+REINST_CrystalHound_C_139.Tags=True
+REINST_CrystalHound_C_139.ComponentReplication=True
+REINST_CrystalHound_C_139.Activation=True
+REINST_CrystalHound_C_139.Cooking=True
+REINST_CrystalHound_C_139.Events=True
+REINST_CrystalHound_C_147.Variable=True
+REINST_CrystalHound_C_147.TransformCommon=True
+REINST_CrystalHound_C_147.Sockets=True
+REINST_CrystalHound_C_147.Shape=True
+REINST_CrystalHound_C_147.Navigation=True
+REINST_CrystalHound_C_147.Rendering=True
+REINST_CrystalHound_C_147.Physics=True
+REINST_CrystalHound_C_147.Collision=True
+REINST_CrystalHound_C_147.Tags=True
+REINST_CrystalHound_C_147.ComponentReplication=True
+REINST_CrystalHound_C_147.Cooking=True
+REINST_CrystalHound_C_147.Events=True
+REINST_CrystalHound_C_177.Variable=True
+REINST_CrystalHound_C_177.TransformCommon=True
+REINST_CrystalHound_C_177.Sockets=True
+REINST_CrystalHound_C_177.Shape=True
+REINST_CrystalHound_C_177.Navigation=True
+REINST_CrystalHound_C_177.Rendering=True
+REINST_CrystalHound_C_177.Physics=True
+REINST_CrystalHound_C_177.Collision=True
+REINST_CrystalHound_C_177.Tags=True
+REINST_CrystalHound_C_177.ComponentReplication=True
+REINST_CrystalHound_C_177.Cooking=True
+REINST_CrystalHound_C_177.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -2818,7 +2935,7 @@ InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Player Hud\" \"Object.Player Hud\" "
+Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent=
 PrimitiveComponent=
@@ -3682,6 +3799,7 @@ LastLogListing=PIE
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/AIAgent/CrystalHound.CrystalHound;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
 RecentlyPlaced=/Game/AIAgent/DerivedClasses/RangedAI.RangedAI;
@@ -3701,7 +3819,6 @@ RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVo
 RecentlyPlaced=/Game/c024816h/Elixir.Elixir;
 RecentlyPlaced=/Game/c024816h/VitalityPotion.VitalityPotion;
 RecentlyPlaced=/Game/c024816h/BottledRage.BottledRage;
-RecentlyPlaced=/Game/c024816h/CurePotion.CurePotion;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -3754,26 +3871,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Will/segmenttest
-MRUItem1=/Game/Widgets/Ability_Wheel
-MRUItem2=/Game/AIAgent/AIbot
-MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem4=/Game/Levels/Area2-Market
-MRUItem5=/Game/Models/weapons/crystal_sword
-MRUItem6=/Game/Models/Ben/gate
-MRUItem7=/Game/AIAgent/BaseAI
-MRUItem8=/Game/CombatInterface/I_Combat
-MRUItem9=/Game/EnemyAgent/CorruptedSlave
-MRUItem10=/Game/EnemyAgent/EnemyStats
-MRUItem11=/Game/EnemyAgent/EnemyData
-MRUItem12=/Game/GW000979/DataStruct/ArmourSlot
-MRUItem13=/Game/Mannequin/Character/Materials/TempCharacterInst
-MRUItem14=/Game/c024816h/TopDownCharacter3
-MRUItem15=/Game/c024816h/PickUpInterface
-MRUItem16=/Game/c024816h/BasePickUp
-MRUItem17=/Game/TopDownBP/Interfaces/PlayerInt
-MRUItem18=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem19=/Game/Levels/Demo
+MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem1=/Game/Will/CyrstalHound
+MRUItem2=/Game/AIAgent/CrystalHound
+MRUItem3=/Game/AIAgent/NewAIBoard
+MRUItem4=/Game/AIAgent/ProtoAI
+MRUItem5=/Game/AIAgent/AIController_I
+MRUItem6=/Game/AIAgent/AIbot
+MRUItem7=/Game/Will/segmenttest
+MRUItem8=/Game/Widgets/Ability_Wheel
+MRUItem9=/Game/Levels/Area2-Market
+MRUItem10=/Game/Models/weapons/crystal_sword
+MRUItem11=/Game/Models/Ben/gate
+MRUItem12=/Game/AIAgent/BaseAI
+MRUItem13=/Game/CombatInterface/I_Combat
+MRUItem14=/Game/EnemyAgent/CorruptedSlave
+MRUItem15=/Game/EnemyAgent/EnemyStats
+MRUItem16=/Game/EnemyAgent/EnemyData
+MRUItem17=/Game/GW000979/DataStruct/ArmourSlot
+MRUItem18=/Game/Mannequin/Character/Materials/TempCharacterInst
+MRUItem19=/Game/c024816h/TopDownCharacter3
 
 [WidgetTemplatesExpanded]
 Extra=True
