--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -260,7 +260,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/AIAgent
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 
 [EditorStartup]
 LastLevel=/Game/Levels/Demo
@@ -268,7 +268,7 @@ LastLevel=/Game/Levels/Demo
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
-OpenAssetsAtExit=/Game/GW000979/EHealth.EHealth
+OpenAssetsAtExit=/Game/AIAgent/ProtoAI.ProtoAI
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2815,8 +2815,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
-Character="\"Object.CharacterHealth\" \"Object.CharacterHealth\" "
-Pawn="\"Object.CharacterHealth\" \"Object.CharacterHealth\" "
+Character="\"Object.LifeStealTimerHandle\" \"Object.LifeStealTimerHandle\" "
+Pawn="\"Object.LifeStealTimerHandle\" \"Object.LifeStealTimerHandle\" "
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C="\"Object.TargetEnemy\" \"Object.TargetEnemy\" "
@@ -2828,7 +2828,7 @@ AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Percept
 TestPawn_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
-Controller=
+Controller="\"Object.Default.DebugColour\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 TopDownCharacter_C="\"Object.BleedTimerCount\" \"Object.BleedTimerCount\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2887,7 +2887,7 @@ Pause_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Obj
 Start_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CoolDownComponent_C="\"Object.\" \"Object.\" "
 RangedAI_C=
-BaseAI_C="\"Object.CharacterHealth\" \"Object.CharacterHealth\" "
+BaseAI_C="\"Object.LifeStealTimerHandle\" \"Object.LifeStealTimerHandle\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
@@ -3735,26 +3735,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AIAgent/AIUIInt
-MRUItem1=/Game/AIAgent/BaseAI
-MRUItem2=/Game/GW000979/EHealth
-MRUItem3=/Game/Levels/Demo
-MRUItem4=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem5=/Game/TopDownBP/Blueprints/I_PlayerStatus
-MRUItem6=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem7=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem8=/Game/CombatInterface/I_Combat
-MRUItem9=/Game/TopDownBP/Blueprints/ICoolDown
-MRUItem10=/Game/TopDownBP/Blueprints/CoolDownComponent
-MRUItem11=/Game/Models/weapons/crystal_sword
-MRUItem12=/Game/Models/Ben/gate
-MRUItem13=/Game/Levels/Area2-Market
-MRUItem14=/Game/EnemyAgent/CorruptedSlave
-MRUItem15=/Game/EnemyAgent/EnemyStats
-MRUItem16=/Game/EnemyAgent/EnemyData
-MRUItem17=/Game/GW000979/DataStruct/ArmourSlot
-MRUItem18=/Game/Mannequin/Character/Materials/TempCharacterInst
-MRUItem19=/Game/c024816h/TopDownCharacter3
+MRUItem0=/Game/Levels/Demo
+MRUItem1=/Game/AIAgent/Proto_controller
+MRUItem2=/Game/AIAgent/ProtoTree
+MRUItem3=/Game/AIAgent/ProtoAI
+MRUItem4=/Game/AIAgent/BaseAI
+MRUItem5=/Game/AIAgent/AIUIInt
+MRUItem6=/Game/GW000979/EHealth
+MRUItem7=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem8=/Game/TopDownBP/Blueprints/I_PlayerStatus
+MRUItem9=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem10=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem11=/Game/CombatInterface/I_Combat
+MRUItem12=/Game/TopDownBP/Blueprints/ICoolDown
+MRUItem13=/Game/TopDownBP/Blueprints/CoolDownComponent
+MRUItem14=/Game/Models/weapons/crystal_sword
+MRUItem15=/Game/Models/Ben/gate
+MRUItem16=/Game/Levels/Area2-Market
+MRUItem17=/Game/EnemyAgent/CorruptedSlave
+MRUItem18=/Game/EnemyAgent/EnemyStats
+MRUItem19=/Game/EnemyAgent/EnemyData
 
 [WidgetTemplatesExpanded]
 Extra=False
