--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,9 +103,9 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Levels/texturedzoo
-MRUItem1=/Game/Levels/Demo
-MRUItem2=/Game/Levels/Area2-MarketMeshStart
+MRUItem0=/Game/Levels/Area2-MarketMeshStart
+MRUItem1=/Game/Levels/texturedzoo
+MRUItem2=/Game/Levels/Demo
 MRUItem3=/Game/TopDownBP/Maps/TopDownExampleMap
 MRUItem4=/Game/Levels/Area2-Market
 MRUItem5=/Game/Levels/MechanicsLevel
@@ -241,7 +241,7 @@ AbilityComponent_C=TopDownCharacter_C.Collision.Collision,StructProperty.Default
 LevelUp_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 DashAbility_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 Hurricane_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
-PostProcessComponent=PostProcessComponent.Color Grading.Color Grading|Misc,PostProcessComponent.Lens.Lens|Chromatic Aberration,PostProcessComponent.Lens.Lens|BloomAdvanced,PostProcessComponent.Lens.Lens|Bloom,PostProcessComponent.Lens.Lens|Dirt Mask,PostProcessComponent.Lens.Lens|Camera,PostProcessComponent.Lens.Lens|ExposureAdvanced,PostProcessComponent.Lens.Lens|Exposure,PostProcessComponent.Lens.Lens|Lens Flares,PostProcessComponent.Lens.Lens|Depth of FieldAdvanced,PostProcessComponent.Lens.Lens|Depth of Field,PostProcessComponent.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessComponent.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessComponent.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessComponent.Rendering Features.Rendering Features|Global Illumination,PostProcessComponent.Rendering Features.Rendering Features|Motion Blur,PostProcessComponent.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,PostProcessComponent.Rendering Features.Rendering Features|Light Propagation Volume,
+PostProcessComponent=PostProcessComponent.Color Grading.Color Grading
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -265,14 +265,13 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game
 
 [EditorStartup]
-LastLevel=/Game/Levels/texturedzoo
+LastLevel=/Game/Levels/Area2-MarketMeshStart
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2763,6 +2762,9 @@ PostProcessComponent.Cooking=True
 PostProcessComponent.Events=True
 PostProcessComponent.Physics=True
 PostProcessComponent.Collision=True
+InstancedFoliageActor.TransformCommon=True
+InstancedFoliageActor.Input=True
+InstancedFoliageActor.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3808,10 +3810,10 @@ PaintDensity=0.010000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/texturedzoo
-MRUItem1=/Game/Levels/Demo
-MRUItem2=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem3=/Game/Levels/Area2-MarketMeshStart
+MRUItem0=/Game/Levels/Area2-MarketMeshStart
+MRUItem1=/Game/Levels/texturedzoo
+MRUItem2=/Game/Levels/Demo
+MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacter
 MRUItem4=/Game/Foliage/Crystals/M_CrystalParent
 MRUItem5=/Game/Foliage/Crystals/ExposedCrystal_3
 MRUItem6=/Game/Foliage/Crystals/ExposedCrystal_1
