time dilation on menu exit

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,11 +104,11 @@ CurrentRotGridSize=0
 CurrentPosGridSize=1
 
 [MRU]
-MRUItem0=/Game/Levels/TerrainMap
-MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem2=/Game/Levels/Area2-Market
-MRUItem3=/Game/Levels/Demo
-MRUItem4=/Game/Levels/texturedzoo
+MRUItem0=/Game/Levels/texturedzoo
+MRUItem1=/Game/Levels/TerrainMap
+MRUItem2=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem3=/Game/Levels/Area2-Market
+MRUItem4=/Game/Levels/Demo
 MRUItem5=/Game/Levels/MechanicsLevel
 MRUItem6=/Game/Levels/MainMenu
 MRUItem7=/Game/Chloe/UI/Main_Menu_level/Main_Menu
@@ -259,17 +259,15 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 
 [EditorStartup]
-LastLevel=/Game/Levels/TerrainMap
+LastLevel=/Game/Levels/texturedzoo
 
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/Widgets/Ability_Wheel.Ability_Wheel
-OpenAssetsAtExit=/Game/Chloe/UI/HUD_Proto.HUD_Proto
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned.TopDownCharacterCleaned
+OpenAssetsAtExit=/Game/AIAgent/CrystalHound.CrystalHound
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2964,7 +2962,7 @@ InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent=
 PrimitiveComponent=
@@ -2992,7 +2990,7 @@ NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
 Controller=
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C="\"Object.PlayerDashLength\" \"Object.PlayerDashLength\" "
+TopDownCharacter_C=
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3900,26 +3898,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/weapons/broken_shield
-MRUItem1=/Game/Models/weapons/shield
-MRUItem2=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
-MRUItem3=/Game/Lighting/GlobalLighting
-MRUItem4=/Game/Chloe/UI/HUD_Proto
-MRUItem5=/Game/Widgets/Ability_Wheel
-MRUItem6=/Game/Levels/TerrainMap
-MRUItem7=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem8=/Game/Will/CyrstalHound
-MRUItem9=/Game/AIAgent/CrystalHound
-MRUItem10=/Game/AIAgent/NewAIBoard
-MRUItem11=/Game/AIAgent/ProtoAI
-MRUItem12=/Game/AIAgent/AIController_I
-MRUItem13=/Game/AIAgent/AIbot
-MRUItem14=/Game/Will/segmenttest
-MRUItem15=/Game/Levels/Area2-Market
-MRUItem16=/Game/Models/weapons/crystal_sword
-MRUItem17=/Game/Models/Ben/gate
-MRUItem18=/Game/AIAgent/BaseAI
-MRUItem19=/Game/CombatInterface/I_Combat
+MRUItem0=/Game/Levels/texturedzoo
+MRUItem1=/Game/AIAgent/CrystalHound
+MRUItem2=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem3=/Game/Models/weapons/broken_shield
+MRUItem4=/Game/Models/weapons/shield
+MRUItem5=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
+MRUItem6=/Game/Lighting/GlobalLighting
+MRUItem7=/Game/Chloe/UI/HUD_Proto
+MRUItem8=/Game/Widgets/Ability_Wheel
+MRUItem9=/Game/Levels/TerrainMap
+MRUItem10=/Game/Will/CyrstalHound
+MRUItem11=/Game/AIAgent/NewAIBoard
+MRUItem12=/Game/AIAgent/ProtoAI
+MRUItem13=/Game/AIAgent/AIController_I
+MRUItem14=/Game/AIAgent/AIbot
+MRUItem15=/Game/Will/segmenttest
+MRUItem16=/Game/Levels/Area2-Market
+MRUItem17=/Game/Models/weapons/crystal_sword
+MRUItem18=/Game/Models/Ben/gate
+MRUItem19=/Game/AIAgent/BaseAI
 
 [WidgetTemplatesExpanded]
 Extra=True
