--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -261,10 +261,10 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 
 [EditorStartup]
-LastLevel=/Game/Levels/Area2-Market
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
