--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -102,6 +102,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=False,EnabledStats=,bShowFullToolbar=True))
 CurrentRotGridSize=0
 CurrentPosGridSize=4
+GridEnabled=False
 
 [MRU]
 MRUItem0=/Game/Levels/Demo
@@ -241,6 +242,7 @@ AbilityComponent_C=TopDownCharacter_C.Collision.Collision,StructProperty.Default
 LevelUp_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 DashAbility_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 Hurricane_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+ByteProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -264,19 +266,16 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/T019847G/Leveling
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 
 [EditorStartup]
 LastLevel=/Game/Levels/Demo
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/T019847G/Leveling/Hurricane.Hurricane
+OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
+OpenAssetsAtExit=/Game/AIAgent/Proto_controller.Proto_controller
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/T019847G/Leveling/AbilityComponent.AbilityComponent
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode
-OpenAssetsAtExit=/Game/T019847G/Leveling/DashAbility.DashAbility
-OpenAssetsAtExit=/Game/T019847G/Leveling/LevelUp.LevelUp
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2876,7 +2875,7 @@ AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Percept
 TestPawn_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
-Controller=
+Controller="\"Object.Default.DebugColour\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 TopDownCharacter_C=
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2935,7 +2934,7 @@ Pause_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Obj
 Start_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CoolDownComponent_C="\"Object.\" \"Object.\" "
 RangedAI_C=
-BaseAI_C="\"Object.StatusChance\" \"Object.StatusChance\" "
+BaseAI_C="\"Object.Stun Duration\" \"Object.Stun Duration\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
@@ -2971,7 +2970,7 @@ BoxComponent.Collision=True
 FoliageType_InstancedStaticMesh.Mesh=True
 
 [RootWindow]
-ScreenPosition=X=315.000 Y=155.000
+ScreenPosition=X=338.000 Y=608.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -2989,7 +2988,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3785,19 +3784,19 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/T019847G/Leveling/Hurricane
-MRUItem1=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem2=/Game/TopDownBP/Blueprints/I_PlayerStatus
-MRUItem3=/Game/T019847G/Leveling/LevelUp
-MRUItem4=/Game/T019847G/Leveling/DashAbility
-MRUItem5=/Game/CombatInterface/I_Combat
-MRUItem6=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem7=/Game/Levels/Demo
-MRUItem8=/Game/T019847G/Leveling/I_AbilityComponent
-MRUItem9=/Game/T019847G/Leveling/AbilityComponent
-MRUItem10=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem11=/Game/AIAgent/BaseAI
-MRUItem12=/Game/AIAgent/Proto_controller
+MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem1=/Game/AIAgent/Proto_controller
+MRUItem2=/Game/Levels/Demo
+MRUItem3=/Game/AIAgent/BaseAI
+MRUItem4=/Game/T019847G/Leveling/Hurricane
+MRUItem5=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem6=/Game/TopDownBP/Blueprints/I_PlayerStatus
+MRUItem7=/Game/T019847G/Leveling/LevelUp
+MRUItem8=/Game/T019847G/Leveling/DashAbility
+MRUItem9=/Game/CombatInterface/I_Combat
+MRUItem10=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem11=/Game/T019847G/Leveling/I_AbilityComponent
+MRUItem12=/Game/T019847G/Leveling/AbilityComponent
 MRUItem13=/Game/AIAgent/ProtoTree
 MRUItem14=/Game/AIAgent/ProtoAI
 MRUItem15=/Game/AIAgent/AIUIInt
