--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -266,14 +266,14 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/AIAgent
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 
 [EditorStartup]
-LastLevel=/Game/Levels/Demo
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2763,6 +2763,19 @@ REINST_Proto_controller_C_267.Rendering=True
 REINST_Proto_controller_C_267.Replication=True
 REINST_Proto_controller_C_267.Input=True
 REINST_Proto_controller_C_267.Actor=True
+TopDownCharacter_C.Crystallise=True
+TopDownCharacter_C.Blind=True
+TopDownCharacter_C.Poison=True
+TopDownCharacter_C.LifeStealDebuff=True
+REINST_TopDownCharacter_C_132.None=True
+REINST_TopDownCharacter_C_132.Tick=True
+REINST_TopDownCharacter_C_132.Character=True
+REINST_TopDownCharacter_C_132.Camera=True
+REINST_TopDownCharacter_C_132.Pawn=True
+REINST_TopDownCharacter_C_132.Rendering=True
+REINST_TopDownCharacter_C_132.Replication=True
+REINST_TopDownCharacter_C_132.Input=True
+REINST_TopDownCharacter_C_132.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -2876,8 +2889,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
-Character="\"Object.CrystalliseDuration\" \"Object.CrystalliseDuration\" "
-Pawn="\"Object.CrystalliseDuration\" \"Object.CrystalliseDuration\" "
+Character=
+Pawn=
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C="\"Object.TargetEnemy\" \"Object.TargetEnemy\" "
@@ -2891,7 +2904,7 @@ NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
 Controller="\"Object.Default.DebugColour\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C="\"Object.BaseDamage\" \"Object.BaseDamage\" "
+TopDownCharacter_C=
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3798,13 +3811,13 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AIAgent/BaseAI
-MRUItem1=/Game/TopDownBP/Blueprints/I_PlayerStatus
-MRUItem2=/Game/AIAgent/Proto_controller
-MRUItem3=/Game/AIAgent/ProtoTree
-MRUItem4=/Game/Levels/Demo
-MRUItem5=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem6=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem1=/Game/AIAgent/BaseAI
+MRUItem2=/Game/TopDownBP/Blueprints/I_PlayerStatus
+MRUItem3=/Game/AIAgent/Proto_controller
+MRUItem4=/Game/AIAgent/ProtoTree
+MRUItem5=/Game/Levels/Demo
+MRUItem6=/Game/TopDownBP/Blueprints/PlayerControl
 MRUItem7=/Game/T019847G/Leveling/Hurricane
 MRUItem8=/Game/T019847G/Leveling/LevelUp
 MRUItem9=/Game/T019847G/Leveling/DashAbility
