--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -246,6 +246,7 @@ ByteProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueC
 CapsuleComponent=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 StaticMeshActor=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
+ThirdPerson_AnimBP_C=
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -269,13 +270,40 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/T019847G/FadingMeshes
+ContentBrowserTab1.SelectedPaths=/Game/AIAgent
+SequenceBrowser.ActiveTypeFilters=
+SequenceBrowser.EnabledTypeFilters=
+SequenceBrowser.ActiveFrontendFilters=
+SequenceBrowser.EnabledFrontendFilters=
+SequenceBrowser.ThumbnailSizeScale=0.100000
+SequenceBrowser.CurrentViewType=2
+SequenceBrowser.HiddenColumns=Compression Ratio
+SequenceBrowser.HiddenColumns=Compressed Size (KB)
+SequenceBrowser.HiddenColumns=NumFrames
+SequenceBrowser.HiddenColumns=AdditiveAnimType
+SequenceBrowser.HiddenColumns=RetargetSource
+SequenceBrowser.HiddenColumns=Interpolation
+SequenceBrowser.HiddenColumns=bEnableRootMotion
+SequenceBrowser.HiddenColumns=SequenceLength
+SequenceBrowser.HiddenColumns=Skeleton
+SequenceBrowser.HiddenColumns=ParentAsset
+SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
+SequenceBrowser.HiddenColumns=CurveNameList
+SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
+OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin
+OpenAssetsAtExit=/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D.ThirdPerson_IdleRun_2D
+OpenAssetsAtExit=/Game/Mannequin/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP
+OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton
+OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/SK_Mannequin_PhysicsAsset.SK_Mannequin_PhysicsAsset
+OpenAssetsAtExit=/Game/AIAgent/I_Animation.I_Animation
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2790,6 +2818,91 @@ MaterialExpressionCollectionParameter.MaterialExpression=True
 MaterialParameterCollection.Material=True
 MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LODCustomMode=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LODSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.Physics=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.Animation=True
+SkeletalMesh.Sampling=True
+BlendSpace1D.InputInterpolation=True
+BlendSpace1D.Axis Settings=True
+BlendSpace1D.AdditiveSettings=True
+BlendSpace1D.BlendSamples=True
+BlendSpace1D.Animation=True
+BlendSpace1D.SampleInterpolation=True
+BlendSpace1D.AnimationNotifies=True
+BlendSpace1D.MetaData=True
+BlendSpace1D.Thumbnail=True
+ThirdPerson_AnimBP_C.Default=True
+ThirdPerson_AnimBP_C.RootMotion=True
+PersonaPreviewSceneDescription.Animation=True
+PersonaPreviewSceneDescription.Mesh=True
+PersonaPreviewSceneDescription.Additional Meshes=True
+PhysicsAssetGenerationSettings.Body Creation=True
+PhysicsAssetGenerationSettings.Constraint Creation=True
+AnimationGraph.Graph=True
+AnimGraphNode_StateMachine.GraphNodeDetail=True
+AnimGraphNode_StateMachine.Settings=True
+AnimBlueprint.ClassOptions=True
+AnimBlueprint.Optimization=True
+AnimBlueprint.Interfaces=True
+AnimBlueprint.BlueprintOptions=True
+AnimBlueprint.Packaging=True
+AnimBlueprint.Thumbnail=True
+BaseAI_C.Variable=True
+BaseAI_C.Sockets=True
+BaseAI_C.ComponentReplication=True
+BaseAI_C.Events=True
+REINST_BaseAI_C_144.TransformCommon=True
+REINST_BaseAI_C_144.Animation=True
+REINST_BaseAI_C_144.Mesh=True
+REINST_BaseAI_C_144.None=True
+REINST_BaseAI_C_144.Physics=True
+REINST_BaseAI_C_144.Clothing=True
+REINST_BaseAI_C_144.Collision=True
+REINST_BaseAI_C_144.Lighting=True
+REINST_BaseAI_C_144.ClothingSimulation=True
+REINST_BaseAI_C_144.Rendering=True
+REINST_BaseAI_C_144.Tags=True
+REINST_BaseAI_C_144.Activation=True
+REINST_BaseAI_C_144.Cooking=True
+REINST_BaseAI_C_144.Character Movement: Jumping / Falling=True
+REINST_BaseAI_C_144.Character Movement (General Settings)=True
+REINST_BaseAI_C_144.Character Movement: Walking=True
+REINST_BaseAI_C_144.Character Movement: Swimming=True
+REINST_BaseAI_C_144.Character Movement: Flying=True
+REINST_BaseAI_C_144.Character Movement: Custom Movement=True
+REINST_BaseAI_C_144.Character Movement (Rotation Settings)=True
+REINST_BaseAI_C_144.Character Movement: Physics Interaction=True
+REINST_BaseAI_C_144.Character Movement (Networking)=True
+REINST_BaseAI_C_144.Character Movement=True
+REINST_BaseAI_C_144.Character Movement: Avoidance=True
+REINST_BaseAI_C_144.Character Movement: NavMesh Movement=True
+REINST_BaseAI_C_144.RootMotion=True
+REINST_BaseAI_C_144.NavMovement=True
+REINST_BaseAI_C_144.Velocity=True
+REINST_BaseAI_C_144.PlanarMovement=True
+REINST_BaseAI_C_144.MovementComponent=True
+REINST_BaseAI_C_144.Shape=True
+REINST_BaseAI_C_144.Navigation=True
+REINST_BaseAI_C_144.Character=True
+REINST_BaseAI_C_144.Camera=True
+REINST_BaseAI_C_144.Pawn=True
+REINST_BaseAI_C_144.Input=True
+REINST_BaseAI_C_144.Actor=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
+AnimStateNode.GraphNodeDetail=True
+AnimStateNode.Animation State=True
+AnimationStateMachineGraph.Graph=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -2902,14 +3015,14 @@ PrimitiveComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
 SceneComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
 ActorComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
-DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
+DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
-Character="\"Object.BaseDamage\" \"Object.BaseDamage\" "
-Pawn="\"Object.BaseDamage\" \"Object.BaseDamage\" "
+Character=
+Pawn=
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C="\"Object.TargetEnemy\" \"Object.TargetEnemy\" "
@@ -2923,7 +3036,7 @@ NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
 Controller="\"Object.Default.DebugColour\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C="\"Object.BaseDamage\" \"Object.BaseDamage\" "
+TopDownCharacter_C=
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2980,7 +3093,7 @@ Pause_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Obj
 Start_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CoolDownComponent_C="\"Object.\" \"Object.\" "
 RangedAI_C=
-BaseAI_C="\"Object.CrystalliseDuration\" \"Object.CrystalliseDuration\" "
+BaseAI_C="\"Object.AttackSpeed\" \"Object.AttackSpeed\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
@@ -3011,6 +3124,8 @@ LevelUp_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object
 CapsuleComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
 StaticMeshActor=
 MaterialParameterCollection="\"Object.Material.ScalarParameters\" \"Object.Material.ScalarParameters.ScalarParameters[0]\" "
+ThirdPerson_AnimBP_C=
+AnimInstance=
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3037,7 +3152,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../My Documents/Github/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3631,12 +3746,12 @@ BlueprintGraph.TimeStamp=2019.01.11-10.22.56
 BlueprintGraph.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2018.09.20-07.56.11
 ExternalImagePicker.LastCompileMethod=External
-SkeletonEditor.TimeStamp=2018.09.07-09.34.42
-SkeletonEditor.LastCompileMethod=Unknown
-PinnedCommandList.TimeStamp=2018.09.07-09.34.37
-PinnedCommandList.LastCompileMethod=Unknown
-ClothingSystemEditorInterface.TimeStamp=2018.09.07-09.34.18
-ClothingSystemEditorInterface.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2018.09.20-07.56.19
+SkeletonEditor.LastCompileMethod=External
+PinnedCommandList.TimeStamp=2018.09.20-07.56.16
+PinnedCommandList.LastCompileMethod=External
+ClothingSystemEditorInterface.TimeStamp=2018.09.20-07.56.07
+ClothingSystemEditorInterface.LastCompileMethod=External
 NewLevelDialog.TimeStamp=2018.06.09-14.06.59
 NewLevelDialog.LastCompileMethod=Unknown
 DataTableEditor.TimeStamp=2018.09.20-07.56.08
@@ -3713,6 +3828,12 @@ SequencerWidgets.TimeStamp=2018.09.20-07.56.18
 SequencerWidgets.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2018.09.20-07.56.19
 StaticMeshEditor.LastCompileMethod=Unknown
+AnimationEditor.TimeStamp=2018.09.20-07.56.05
+AnimationEditor.LastCompileMethod=Unknown
+AnimationBlueprintEditor.TimeStamp=2018.09.20-07.56.05
+AnimationBlueprintEditor.LastCompileMethod=Unknown
+PhysicsAssetEditor.TimeStamp=2018.09.20-07.56.16
+PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -3743,6 +3864,14 @@ AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeInd
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
+Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+Contexts=(Name="SkeletalMeshEditor",Commands=)
+Contexts=(Name="AnimationEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationEditor",Commands=)
+Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationBlueprintEditor",Commands=)
+Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
+Contexts=(Name="PhysicsAssetEditor",Commands=)
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2013
@@ -3833,26 +3962,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/T019847G/FadingMeshes/NewFade_M
-MRUItem1=/Game/T019847G/FadingMeshes/MaterialParameter
-MRUItem2=/Game/T019847G/FadingMeshes/Fade_M
-MRUItem3=/Game/T019847G/FadingMeshes/Fade_Inst
-MRUItem4=/Game/T019847G/FadingMeshes/FadeComponent
-MRUItem5=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem0=/Game/AIAgent/I_Animation
+MRUItem1=/Game/Mannequin/Character/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem2=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem3=/Game/Mannequin/Animations/ThirdPerson_AnimBP
+MRUItem4=/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D
+MRUItem5=/Game/Mannequin/Character/Mesh/SK_Mannequin
 MRUItem6=/Game/AIAgent/BaseAI
-MRUItem7=/Game/TopDownBP/Blueprints/I_PlayerStatus
-MRUItem8=/Game/AIAgent/Proto_controller
-MRUItem9=/Game/AIAgent/ProtoTree
-MRUItem10=/Game/Levels/Demo
-MRUItem11=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem12=/Game/T019847G/Leveling/Hurricane
-MRUItem13=/Game/T019847G/Leveling/LevelUp
-MRUItem14=/Game/T019847G/Leveling/DashAbility
-MRUItem15=/Game/CombatInterface/I_Combat
-MRUItem16=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem17=/Game/T019847G/Leveling/I_AbilityComponent
-MRUItem18=/Game/T019847G/Leveling/AbilityComponent
-MRUItem19=/Game/AIAgent/ProtoAI
+MRUItem7=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem8=/Game/T019847G/FadingMeshes/NewFade_M
+MRUItem9=/Game/T019847G/FadingMeshes/MaterialParameter
+MRUItem10=/Game/T019847G/FadingMeshes/Fade_M
+MRUItem11=/Game/T019847G/FadingMeshes/Fade_Inst
+MRUItem12=/Game/T019847G/FadingMeshes/FadeComponent
+MRUItem13=/Game/TopDownBP/Blueprints/I_PlayerStatus
+MRUItem14=/Game/AIAgent/Proto_controller
+MRUItem15=/Game/AIAgent/ProtoTree
+MRUItem16=/Game/Levels/Demo
+MRUItem17=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem18=/Game/T019847G/Leveling/Hurricane
+MRUItem19=/Game/T019847G/Leveling/LevelUp
 
 [WidgetTemplatesExpanded]
 Extra=False
