--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -296,14 +296,9 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
-OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin
-OpenAssetsAtExit=/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D.ThirdPerson_IdleRun_2D
-OpenAssetsAtExit=/Game/Mannequin/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP
-OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton
-OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/SK_Mannequin_PhysicsAsset.SK_Mannequin_PhysicsAsset
-OpenAssetsAtExit=/Game/AIAgent/I_Animation.I_Animation
+OpenAssetsAtExit=/Game/AIAgent/AIbot.AIbot
+OpenAssetsAtExit=/Game/EnemyAgent/EnemyStats.EnemyStats
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3002,6 +2997,7 @@ AnimationStateMachineGraph.Graph=True
 /Game/T019847G/FadingMeshes/Fade_M.Fade_M=1
 /Game/T019847G/FadingMeshes/Fade_Inst.Fade_Inst=1
 /Game/T019847G/FadingMeshes/NewFade_M.NewFade_M=1
+/Game/EnemyAgent/EnemyData.EnemyData=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -3093,7 +3089,7 @@ Pause_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Obj
 Start_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CoolDownComponent_C="\"Object.\" \"Object.\" "
 RangedAI_C=
-BaseAI_C="\"Object.AttackSpeed\" \"Object.AttackSpeed\" "
+BaseAI_C=
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
@@ -3962,26 +3958,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AIAgent/I_Animation
-MRUItem1=/Game/Mannequin/Character/Mesh/SK_Mannequin_PhysicsAsset
-MRUItem2=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
-MRUItem3=/Game/Mannequin/Animations/ThirdPerson_AnimBP
-MRUItem4=/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D
-MRUItem5=/Game/Mannequin/Character/Mesh/SK_Mannequin
-MRUItem6=/Game/AIAgent/BaseAI
-MRUItem7=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem8=/Game/T019847G/FadingMeshes/NewFade_M
-MRUItem9=/Game/T019847G/FadingMeshes/MaterialParameter
-MRUItem10=/Game/T019847G/FadingMeshes/Fade_M
-MRUItem11=/Game/T019847G/FadingMeshes/Fade_Inst
-MRUItem12=/Game/T019847G/FadingMeshes/FadeComponent
-MRUItem13=/Game/TopDownBP/Blueprints/I_PlayerStatus
-MRUItem14=/Game/AIAgent/Proto_controller
-MRUItem15=/Game/AIAgent/ProtoTree
-MRUItem16=/Game/Levels/Demo
-MRUItem17=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem18=/Game/T019847G/Leveling/Hurricane
-MRUItem19=/Game/T019847G/Leveling/LevelUp
+MRUItem0=/Game/AIAgent/AIbot
+MRUItem1=/Game/EnemyAgent/EnemyStats
+MRUItem2=/Game/EnemyAgent/EnemyData
+MRUItem3=/Game/AIAgent/BaseAI
+MRUItem4=/Game/AIAgent/I_Animation
+MRUItem5=/Game/Mannequin/Character/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem6=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem7=/Game/Mannequin/Animations/ThirdPerson_AnimBP
+MRUItem8=/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D
+MRUItem9=/Game/Mannequin/Character/Mesh/SK_Mannequin
+MRUItem10=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem11=/Game/T019847G/FadingMeshes/NewFade_M
+MRUItem12=/Game/T019847G/FadingMeshes/MaterialParameter
+MRUItem13=/Game/T019847G/FadingMeshes/Fade_M
+MRUItem14=/Game/T019847G/FadingMeshes/Fade_Inst
+MRUItem15=/Game/T019847G/FadingMeshes/FadeComponent
+MRUItem16=/Game/TopDownBP/Blueprints/I_PlayerStatus
+MRUItem17=/Game/AIAgent/Proto_controller
+MRUItem18=/Game/AIAgent/ProtoTree
+MRUItem19=/Game/Levels/Demo
 
 [WidgetTemplatesExpanded]
 Extra=False
