Updated combat things
 bow, dagger, sword, animations, char model

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -269,7 +269,26 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/T019847G/FadingMeshes
+ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
+SequenceBrowser.ActiveTypeFilters=
+SequenceBrowser.EnabledTypeFilters=
+SequenceBrowser.ActiveFrontendFilters=
+SequenceBrowser.EnabledFrontendFilters=
+SequenceBrowser.ThumbnailSizeScale=0.100000
+SequenceBrowser.CurrentViewType=2
+SequenceBrowser.HiddenColumns=Compression Ratio
+SequenceBrowser.HiddenColumns=Compressed Size (KB)
+SequenceBrowser.HiddenColumns=NumFrames
+SequenceBrowser.HiddenColumns=AdditiveAnimType
+SequenceBrowser.HiddenColumns=RetargetSource
+SequenceBrowser.HiddenColumns=Interpolation
+SequenceBrowser.HiddenColumns=bEnableRootMotion
+SequenceBrowser.HiddenColumns=SequenceLength
+SequenceBrowser.HiddenColumns=Skeleton
+SequenceBrowser.HiddenColumns=ParentAsset
+SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
+SequenceBrowser.HiddenColumns=CurveNameList
+SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
@@ -2790,6 +2809,20 @@ MaterialExpressionCollectionParameter.MaterialExpression=True
 MaterialParameterCollection.Material=True
 MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
+FbxImportUI.Animation=True
+AnimSequence.Animation=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.Compression=True
+AnimSequence.RootMotion=True
+AnimSequence.ImportSettings=True
+AnimSequence.Transform=True
+AnimSequence.Miscellaneous=True
+AnimSequence.File Path=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
+PersonaPreviewSceneDescription.Animation=True
+PersonaPreviewSceneDescription.Mesh=True
+PersonaPreviewSceneDescription.Additional Meshes=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -2889,6 +2922,15 @@ MaterialExpressionConstant.MaterialExpression=True
 /Game/T019847G/FadingMeshes/Fade_M.Fade_M=1
 /Game/T019847G/FadingMeshes/Fade_Inst.Fade_Inst=1
 /Game/T019847G/FadingMeshes/NewFade_M.NewFade_M=1
+/Game/Josh/AnimationsTest/360.360=1
+/Game/Josh/AnimationsTest/Heavy_Slam.Heavy_Slam=1
+/Game/Josh/AnimationsTest/Slash_R2L.Slash_R2L=1
+/Game/Josh/AnimationsTest/Slash_L2R.Slash_L2R=1
+/Game/Josh/AnimationsTest/Stab.Stab=1
+/Game/Josh/AnimationsTest/Quick_Potion.Quick_Potion=1
+/Game/Josh/AnimationsTest/Shield_Barge.Shield_Barge=1
+/Game/Josh/AnimationsTest/Potion_Smash.Potion_Smash=1
+/Game/Josh/AnimationsTest/Imbue.Imbue=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2902,7 +2944,7 @@ PrimitiveComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
 SceneComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
 ActorComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
-DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
+DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -3037,7 +3079,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../My Documents/Github/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3631,12 +3673,12 @@ BlueprintGraph.TimeStamp=2019.01.11-10.22.56
 BlueprintGraph.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2018.09.20-07.56.11
 ExternalImagePicker.LastCompileMethod=External
-SkeletonEditor.TimeStamp=2018.09.07-09.34.42
-SkeletonEditor.LastCompileMethod=Unknown
-PinnedCommandList.TimeStamp=2018.09.07-09.34.37
-PinnedCommandList.LastCompileMethod=Unknown
-ClothingSystemEditorInterface.TimeStamp=2018.09.07-09.34.18
-ClothingSystemEditorInterface.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2018.09.20-07.56.19
+SkeletonEditor.LastCompileMethod=External
+PinnedCommandList.TimeStamp=2018.09.20-07.56.16
+PinnedCommandList.LastCompileMethod=External
+ClothingSystemEditorInterface.TimeStamp=2018.09.20-07.56.07
+ClothingSystemEditorInterface.LastCompileMethod=External
 NewLevelDialog.TimeStamp=2018.06.09-14.06.59
 NewLevelDialog.LastCompileMethod=Unknown
 DataTableEditor.TimeStamp=2018.09.20-07.56.08
@@ -3713,6 +3755,8 @@ SequencerWidgets.TimeStamp=2018.09.20-07.56.18
 SequencerWidgets.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2018.09.20-07.56.19
 StaticMeshEditor.LastCompileMethod=Unknown
+AnimationEditor.TimeStamp=2018.09.20-07.56.05
+AnimationEditor.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -3743,6 +3787,8 @@ AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeInd
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationEditor",Commands=)
+Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2013
@@ -3754,7 +3800,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -3833,26 +3879,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/T019847G/FadingMeshes/NewFade_M
-MRUItem1=/Game/T019847G/FadingMeshes/MaterialParameter
-MRUItem2=/Game/T019847G/FadingMeshes/Fade_M
-MRUItem3=/Game/T019847G/FadingMeshes/Fade_Inst
-MRUItem4=/Game/T019847G/FadingMeshes/FadeComponent
-MRUItem5=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem6=/Game/AIAgent/BaseAI
-MRUItem7=/Game/TopDownBP/Blueprints/I_PlayerStatus
-MRUItem8=/Game/AIAgent/Proto_controller
-MRUItem9=/Game/AIAgent/ProtoTree
-MRUItem10=/Game/Levels/Demo
-MRUItem11=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem12=/Game/T019847G/Leveling/Hurricane
-MRUItem13=/Game/T019847G/Leveling/LevelUp
-MRUItem14=/Game/T019847G/Leveling/DashAbility
-MRUItem15=/Game/CombatInterface/I_Combat
-MRUItem16=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem17=/Game/T019847G/Leveling/I_AbilityComponent
-MRUItem18=/Game/T019847G/Leveling/AbilityComponent
-MRUItem19=/Game/AIAgent/ProtoAI
+MRUItem0=/Game/Josh/AnimationsTest/Imbue
+MRUItem1=/Game/Josh/AnimationsTest/Potion_Smash
+MRUItem2=/Game/Josh/AnimationsTest/Shield_Barge
+MRUItem3=/Game/Josh/AnimationsTest/Quick_Potion
+MRUItem4=/Game/Josh/AnimationsTest/Stab
+MRUItem5=/Game/Josh/AnimationsTest/Slash_L2R
+MRUItem6=/Game/Josh/AnimationsTest/Slash_R2L
+MRUItem7=/Game/Josh/AnimationsTest/Heavy_Slam
+MRUItem8=/Game/Josh/AnimationsTest/360
+MRUItem9=/Game/T019847G/FadingMeshes/NewFade_M
+MRUItem10=/Game/T019847G/FadingMeshes/MaterialParameter
+MRUItem11=/Game/T019847G/FadingMeshes/Fade_M
+MRUItem12=/Game/T019847G/FadingMeshes/Fade_Inst
+MRUItem13=/Game/T019847G/FadingMeshes/FadeComponent
+MRUItem14=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem15=/Game/AIAgent/BaseAI
+MRUItem16=/Game/TopDownBP/Blueprints/I_PlayerStatus
+MRUItem17=/Game/AIAgent/Proto_controller
+MRUItem18=/Game/AIAgent/ProtoTree
+MRUItem19=/Game/Levels/Demo
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -3887,6 +3933,7 @@ LodDistance4=0.000000
 LodDistance5=0.000000
 LodDistance6=0.000000
 LodDistance7=0.000000
+bImportAnimations=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
